force-app/main/default/objects/Login_History__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User Device</label>
    <referenceTo>User_Device__c</referenceTo>
    <relationshipLabel>Login Histories</relationshipLabel>
    <relationshipName>Login_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>