force-app/main/default/objects/Login_History__c/fields/Fcm_Token__c.field-meta.xml
<CustomField>
    <fullName>Fcm_Token__c</fullName>
    <label>Fcm Token</label>
    <type>TextArea</type>
</CustomField>