force-app/main/default/objects/Login_History__c/fields/Login_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Date_Time__c</fullName>
    <label>Login Date Time</label>
    <type>DateTime</type>
</CustomField>