force-app/main/default/objects/Login_History__c/fields/Login_IP__c.field-meta.xml
<CustomField>
    <fullName>Login_IP__c</fullName>
    <label>Login IP</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>