force-app/main/default/objects/Login_History__c/fields/Logout_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Logout_Date_Time__c</fullName>
    <label>Logout Date Time</label>
    <type>DateTime</type>
</CustomField>